Adding Important to the media sizing

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
                 }
 
                 .bp-widget-widget {
-                    width: 128px;
-                    height: 128px;
+                    width: 128px!important;
+                    height: 128px!important;
                 }
             }
         
