updating it to iframe

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                     font-size: 14px;
                 }
 
-                .bp-widget-widget {
+                iframe {
                     width: 128px!important;
                     height: 128px!important;
                 }
