--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                     font-size: 14px;
                 }
 
-                iframe {
+                #bp-web-widget {
                     width: 128px!important;
                     height: 128px!important;
                 }
