Moving widget sizing to index

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
                 body {
                     font-size: 14px;
                 }
+                
+                .bp-widget-widget {
+                    width: 128px!important;
+                    height: 128px!important;
+                }
             }
         
             /* Media query for screens with width between 600px and 1200px */
