--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                     font-size: 14px;
                 }
                 
-                #bp-web-widget.bp-widget-widget {
+                iframe#bp-web-widget.bp-widget-widget {
                     width: 128px!important;
                     height: 128px!important;
                 }
