Adding iframe class name for styling

--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
             "botName": "The AI Testing Assistant",
             "termsConditions": "Created by Chris Wallander as a fun experiment.  Use at your own risk.  AI Tools can provide false information, as such, all information should be carefully reviewed.  Chris assumes no responsibility for the robot.",
             "stylesheet": "https://lavareas.github.io/style.css",
-            "useSessionStorage": true
+            "useSessionStorage": true,
+            "className": "bpw-iFrame"
         });
         </script>
     </body>
